<resources>
    <string name="app_name">GetIn</string>
    <string name="log_in">Log In</string>
    <string name="continuer_autant_que">Continuer autant que ...</string>
    <string name="ajouter_annonce">Ajouter une annonce</string>
    <string name="modifier_annonce">Modifier l\'annonce</string>
    <string name="covoitureur">Covoitureur</string>
    <string name="covoituré">Covoituré</string>
    <string name="point_de_depart">Point de départ</string>
    <string name="point_d_arrivee">Point d\'arrivée</string>
    <string name="temps_de_depart">Temps de départ</string>
    <string name="temps_d_arrivee">Temps d\'arrivée</string>
    <string name="nombre_de_places_ndisponibles">Nombre de places\ndisponibles</string>
    <string name="prix">Prix (MAD)</string>
    <string name="description">Description</string>
    <string name="nombre_de_personnes">Nombre de personnes</string>
    <string name="mes_annonces">Mes annonces</string>
    <string name="mes_demandes">Mes demandes</string>
    <string name="deconnecter">Se déconnecter</string>
    <string name="voiture_associee">Info de voiture</string>
    <string name="suivant">Suivant</string>
    <string name="choisir">Choisir</string>
    <string name="annonces_covoitureur">Annonce Covoitureur</string>
    <string name="annonces_covoiture">Annonces Covoituré</string>
    <string name="detail_covoitureur">Détail Annonce</string>
    <string name="dateDepart">Date de départ</string>
    <string name="PtDepart">Point de départ</string>
    <string name="HrArrive">Date Arrivé</string>
    <string name="ptArrive">Point d\'arrivé</string>
    <string name="nbPlaces">Nombre de places</string>
    <string name="nombre_de_places_voiture">Nombre de places</string>
    <string name="prixAnnonce">Prix (MAD)</string>
    <string name="detail_voiture">Détail voiture</string>
    <string name="Demander">Demander</string>
    <string name="monprofil">Mon Profil</string>
    <string name="modifier">Modifier</string>
    <string name="Supprimer">Supprimer</string>
    <string name="mes_annonces_covoiture">Mes annonces covoituré</string>
    <string name="mes_annonces_covoitureur">Mes annonces covoitureur</string>
    <string name="votreDescription">Votre description</string>
    <string name="ecriver_votre_description">Ecriver votre description</string>
    <string name="mes_demandes_acceptées">demandesAcceptées</string>
    <string name="Evaluer">Evaluer</string>
</resources>
